force-app/main/default/objects/Loan_Request__c/Loan_Request__c.object-meta.xml
<CustomObject>
    <label>Loan Request</label>
    <nameField>
        <label>Loan Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>