force-app/main/default/objects/Loan_Request__c/fields/Annual_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate__c</fullName>
    <label>Annual Interest Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>