force-app/main/default/objects/Loan_Request__c/fields/Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Installment__c</fullName>
    <formula>( Amount__c * ( Annual_Interest_Rate__c / 100 / 12)) / (1 - (1 + ( Annual_Interest_Rate__c / 100 / 12))^(-  Requested_Term_Months__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>