force-app/main/default/objects/Loan_Request__c/fields/Requested_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Requested_Term_Months__c</fullName>
    <label>Requested Term Months</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>