force-app/main/default/objects/Loan_Request__c/validationRules/Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>The loan amount must be greater than zero.</errorMessage>
</ValidationRule>